# voice_server

./: .gitignore  README.md  entry.py  pyproject.toml  voice-server-debug.spec  voice-server.spec
LICENSES/: GPL-3.0.txt  STEAM_DISTRIBUTION.txt  THIRD_PARTY.txt
voice_server/: __init__.py  __main__.py  config.py  models.py  server.py  wav_utils.py
voice_server/backends/: __init__.py  base.py  kokoro_backend.py  piper_backend.py
